--- a/style/font.css
+++ b/style/font.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'Montserrat-Bold';
-    src: url('../fonts/Montserrat-Bold.ttf');
+    font-family: 'Montserrat-Bold' ;
+    src: url(../fonts/Montserrat-Bold.ttf);
     font-weight: 700;
 }
 @font-face {
-    font-family: 'Montserrat-Regular';
-    src: url('../fonts/Montserrat-Regular.ttf');
+    font-family: 'Montserrat-Regular' ;
+    src: url(../fonts/Montserrat-Regular.ttf);
     font-weight: 400;
 }
